Updated button styles in _home.scss for improved visibility and changed background color. Adjusted style.min.css to ensure proper formatting and maintain consistency across styles.

--- a/assets/scss/views/_home.scss
+++ b/assets/scss/views/_home.scss
@@ -4109,8 +4109,8 @@ li {
             margin-bottom: 12px;
         }
         .theme-btn{
-            background: #d97742;
-            color: #fff;
+            background: #f2a743;
+            color: #000;
             padding: 14px 36px;
             border-radius: 12px;
             border: 0;
